# UCwOrship

./: .pre-commit-config.yaml  CLAUDE.md  ImageCreationGUI.py  LICENSE  README.md  bugsAndFeatures.txt  guiBackUp.py  image_automation_script.py  pyproject.toml
.github/workflows/: build.yml
assets/txt_files/: hi.txt
backup/: CodeBackup.py  guiBackUp.py
txt_files/: Come Holy Spirit هلم روح الله.txt  Title.txt  arfa3oYdayaAlya  trying to survive.txt  yuhanna.txt  أطلب وجهك.txt  أعطني يا ربُّ قلبًا جديدًا.txt  أنتظرك يا روح الله.txt  ااااا.txt  ابتهجت نفسي.txt  احمدك يا رب بين الشعوب.txt  ارفع يدي عاليا.txt  اروع صديق CAPO.txt  الى بئر السامرة.txt  اليوم تنفتحُ السماء.txt  امي يا امي.txt  انت البسمة.txt  انت عظيم.txt  انشد نشيد الحرية.txt  اهتفوا لله.txt  اهديك كل المجد.txt  ايها الملك السماوي.txt  تسبيح للرب هيعلى.txt  تعال يا روح الرب.txt  تعظم نفسي الرب.txt  خاطب الرب شعبه.txt  دخلت قدس اقداسك - لانك قدرس.txt  روح الله ندعوكَ.txt  روح الله يا روح الله.txt  سبحوا اسم الرب مجدوا.txt  سلمت نفسي في يديك.txt  عظيم انت يا رب.txt  علمني ربي أن آتي اليك.txt  فوق كل قوة ورياسة - يسوع قام يا لفرحتي.txt  كيف لا احيا لك يسوع.txt  لا لن نموت.txt  ما احلى حضورك ربي.txt  ملك المجد ات.txt  نبارك يا ملك المجد.txt  نسبح اسمك.txt  (+11 more)
ucworship/: ImageCreationGUI 2.py  ImageCreationGUI.py  __init__.py  __main__.py  image_automation_script.py  web_server.py
ucworship/assets/txt_files/: Come Holy Spirit هلم روح الله.txt  Title.txt  hiii.txt  trying to survive.txt  tryout.txt  أدخل لقدسك.txt  أريد قلبًا.txt  أعطني يا رب قلبا جديدا.txt  أعطني يا ربُّ قلبَكَ.txt  أما أنا فبكثرة رحمتك.txt  أنا محتاج لمسة روحك.txt  أنت عظيم.txt  ابانا الذي في السماء.txt  ابانا نحبك.txt  ابانا نرفع اسمك الكريم.txt  ابتهجت نفسي.txt  اجهل ما سوف يأتي.txt  احبك ربي يسوع فرحي ان احبك.txt  احمدك احمدك يا رب I will give thanks.txt  احمدك يا رب بين الشعوب.txt  ادخل لقدسك.txt  ادعوك ابا.txt  ارفع اسم الفادي.txt  ارفع يدي عاليا.txt  اريد قلبًا.txt  اسكن تحت ظل جناحيك.txt  اصنع بنا نهضتك.txt  اطلب وجهك.textClipping  اطلب وجهك.txt  اعطني يا رب قلبا جديدا.txt  اعطني يا ربُّ قلبَكَ.txt  اعلنوا السلام.txt  اغمرني اغمرني.txt  اقوياء.txt  الحمد والشكران.txt  الرب حنان ورحيم – انت صالح للكل.txt  الرب عزي وترسي.txt  الرب نوري وخلاصي.txt  الرب هو الله.txt  الرب يسوع في وسطنا.txt  (+111 more)
ucworship/templates/: musician.html
(+1 files in other folders)
